added footer css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,16 @@
+
+/* apply styles to whole page*/
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
-
-
-
+/* apply styles to <body> */
 body {
     font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
     color: #39a6b2;
-    font-family: helvetica, Arial, Helvetica, sans-serif;
 }
 
 /* apply styles to <header> */
@@ -48,4 +45,32 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 22px;
 }
+
+/* apply styles to <footer> */
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: #024e76;
+}
+
+
+
+
 
