--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,30 @@ section {
     line-height: 1.3;
 }
 
+/* reach out styles start */
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
 /* apply styles to <footer> */
 footer {
     background: #fce138;
