--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,24 @@ section {
     color: white;
 }
 
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+/* reach out styles end */
+
 /* apply styles to <footer> */
 footer {
     background: #fce138;
