--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,9 +121,6 @@ section {
 }
 /* Hero Style End */
 
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -131,20 +128,21 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -187,10 +185,6 @@ section {
     font-size: 38px;
 }
 
-.trainers {
-    text-align: center;
-}
-
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -228,7 +222,6 @@ section {
 
 /* reach out styles start */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -293,7 +286,9 @@ footer a {
     color: #024e76;
 }
 
-
+.flex-row {
+    display: flex;
+}
 
 
 
