--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,330 +1,362 @@
-
-/* apply styles to whole page*/
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-/* apply styles to <body> */
-body {
-    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  body {
     color: #39a6b2;
-}
-
-/* apply styles to <header> */
-header {
-    background-image: url(../images/hero-bg.jpg);
-    background-size: cover;
-    background-position: 80%;
-    background-attachment: fixed;
+    font-family: Helvetica, Arial, sans-serif;
+  }
+  
+  
+  /* HEADER / NAV BAR STYLES START */
+  
+  header {
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
     position: sticky;
+    position: -webkit-sticky;
     top: 0;
-}
-
-header h1 {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
+  }
+  
+  header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header a {
+  }
+  
+  header a {
     text-decoration: none;
     color: #fce138;
-}
-
-header nav {
+  }
+  
+  header nav {
     margin: 7px 0;
-}
-
-header nav ul {
+  }
+  
+  header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header nav ul li a {
+  }
+  
+  header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
-}
-
-header nav ul li a:hover {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  header nav ul li a:hover {
     background: #fce138;
     color: #024e76;
     border-radius: 15px;
     text-shadow: none;
-}
-
-section {
+  }
+  
+  /* HEADER / NAVBAR STYLES END */
+  
+  
+  
+  /* FOOTER STYLES START */
+  footer {
+    background: #fce138;
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  footer h2 {
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+  }
+  
+  footer div {
+    line-height: 1.5;
+    text-align: right;
+  }
+  
+  footer a {
+    color: #024e76;
+  }
+  /* END FOOTER STYLES */
+  
+  /* STYLE ALL SECTION TAGS */
+  section {
     padding: 60px;
-}
-
-/* Hero Style Start */
-.hero {
-    background-image: url(../images/hero-bg.jpg);
+  }
+  
+  /* HERO STYLES START */
+  .hero {
+    background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: 80%;
-    background-attachment: fixed;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
-}
-
-.hero-cta {
+    background-attachment: fixed;
+    background-position: 80%;
+  }
+  
+  .hero-cta {
     width: 35%;
     text-align: right;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
-}
-
-.hero-cta h2 {
+  }
+  
+  .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.hero-form {
+  }
+  
+  .hero-form {
     border: 3px solid #024e76;
-    border-radius: 15px;
-    background-color: rgba(252, 225, 56, 0.8);
+    background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.hero-form h3 {
+  }
+  
+  .hero-form button:hover {
+    background-color: #39a6b2;  
+  }
+  
+  .hero-form h3 {
     font-size: 24px;
     margin: 0;
-}
-
-.hero-form p {
+  }
+  .hero-form p {
     margin: 5px 0 15px 0;
-}
-
-.form-input {
+  }
+  
+  .form-input {
     border: 1px solid #024e76;
-    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
-    margin-bottom: 15px;
-    background-color: rgba(255, 255, 255, 0.75);
-}
-
-.form-input:focus {
-    background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 15px; 
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
     outline: none;
-}
-
-.hero-form label {
+  }
+  
+  .hero-form label {
     margin: 0 5px;
-}
-
-.hero-form button {
+  }
+  
+  .hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
-    border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
-}
-
-.hero-form button:hover {
-    background-color: #39a6b2;
-}
-/* Hero Style End */
-
-
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.steps {
-    background: #fce138;
-}
-
-.section-title {
-    font-size: px;
-    color: #024e76;
+    border-radius: 10px;
+  } 
+  /* HERO STYLES END */
+  
+  
+  /* SECTION TITLE STYLES START */
+  .section-title {
+    font-size: 48px;
     border-bottom: 3px solid;
+    color: #024e76;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
-}
-
-.primary-border {
+  }
+  
+  .primary-border {
     border-color: #fce138;
-}
-
-.secondary-border {
+  }
+  
+  .secondary-border {
     border-color: #39a6b2;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.step {
+  }
+  /* SECTION TITLE STYLES END */
+  
+  /* WHAT WE DO STYLES */
+  
+  .intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  
+  /* WHAT YOU DO STYLES START */
+  .steps { 
+    background: #fce138;
+  }
+  
+  .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
+    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
-
-.step:not(:last-child) {
-    border-bottom: 1px solid #39a6b2;
-}
-
-.step h3 {
+  }
+  
+  .step:last-child {
+    border-bottom: none;
+  }
+  
+  .step h3 {
     color: #024e76;
     font-size: 46px;
     flex: 1 30%;
-}
-
-.step-info {
+  }
+  
+  .step-info {
     flex: 2 70%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-}
-
-.step-img {
+  }
+  
+  .step-img {
     flex: 1 12%;
     margin-right: 20px;
-}
-
-.step-img img {
+  }
+  
+  .step-img img {
     max-width: 100%;
-}
-
-.step-text {
+  }
+  
+  .step-text {
     flex: 12;
-}
-
-.step-text p {
+  }
+  
+  .step-text p {
     color: #39a6b2;
     font-size: 18px;
-}
-
-.step-text h4 {
+  }
+  
+  .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
-}
-
-.trainers {
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  /* MEET THE TRAINERS START */
+  .trainers {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-
-.trainer {
+  }
+  
+  .trainer {
     margin: 20px;
+    flex: 1;
     background: #024e76;
     color: #fce138;
-    flex: 1;
-}
-
-.trainer img {
+  }
+  
+  .trainer img {
     width: 100%;
-}
-
-.trainer-bio {
+  }
+  
+  .trainer-bio {
     padding: 25px;
     line-height: 1.3;
-}
-
-.trainer-bio h3 {
+  }
+  
+  .trainer-bio h3 {
     font-size: 28px;
-}
-
-.trainer-bio h4 {
+  }
+  
+  .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
-}
-
-.trainer-bio p {
+  }
+  
+  .trainer-bio p {
     font-size: 17px;
-}
-
-/* reach out styles start */
-.contact {
+  }
+  /* TRAINER STYLES END */
+  
+  /* REACH OUT STYLES START */
+  .contact {
     background: #024e76;
-}
-
-.contact h2 {
+  }
+  
+  .contact h2 {
     color: #fce138;
-}
-
-.contact-info {
+  }
+  
+  .contact-info {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-.contact-info iframe {
+  }
+  
+  .contact-info > * {
+    flex: 1;
+    margin: 15px;
+  }
+  
+  .contact-info iframe {
     height: 400px;
-}
-
-.contact-info div {
+  }
+  
+  .contact-info div {
     color: white;
-}
-
-.contact-info h3 {
+  }
+  
+  .contact-info h3 {
     color: #fce138;
     font-size: 32px;
-}
-
-.contact-info p, .contact-info address {
+  }
+  
+  .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
-}
-
-.contact-info a {
-    color: #fce138;
-}
-
-.contact-form input, .contact-form textarea {
+  }
+  
+  .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
-    border-radius: 10px;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
@@ -332,167 +364,158 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
-    background-color: rgba(255, 255, 255, 0.75);
-}
-
-.contact-form input:focus, .contact-form textarea:focus {
-    background-color: rgba(255, 255, 255, 1);
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
     outline: none;
-}
-
-.contact-form button {
+  }
+  
+  .contact-form button {
     width: 100%;
     border: none;
-    border-radius: 10px;
     background: #fce138;
     color: #024e76;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
-}
-
-.contact-form button:hover {
+    border-radius: 10px;
+  }
+  
+  .contact-form button:hover {
     color: #fce138;
     background: #39a6b2;
-}
-/* reach out styles end */
-
-/* apply styles to <footer> */
-footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-footer h2 {
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-}
-
-footer div {
-    line-height: 1.5;
-    text-align: right;
-}
-
-footer a {
-    color: #024e76;
-}
-
-.flex-row {
-    display: flex;
-}
-
-
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-@media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
-    }
-
-    header h1 {
-        width: 100%;
-        text-align: center;
-    }
-
-    header nav ul {
-        margin-top:20px;
-        width: 100%;
-        justify-content: center;
-    }
-
-    header nav ul li a {
-        font-size: 20px;
-    }
-
-    footer h2, footer div {
-        text-align: center;
-        width: 100%;
-    }
-    
-    .hero-cta, .hero-form {
-        width: 100%;
-    }
-
-    .hero-cta {
-        text-align: center;
-    }
-    
-    .section-title {
-        width: 80%;
-    }
-
-    .trainer {
-        flex: 0 70%;
-    }
-
-    .contact-info iframe {
-        flex: 1 100%;
-    }
-}
+  }
   
-/* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
-    section {
-        padding: 30px 15px;
+  .contact-info a {
+    color: #fce138;
+  }
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+  
+  .flex-row {
+    display: flex;
+  }
+  
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+  @media screen and (max-width: 980px) {
+    header {
+      padding-bottom: 0;
+      justify-content: center;
+      position: relative;
     }
-
-    .step h3 {
-        flex: 1 100%;
-        text-align: center;
+  
+    header h1 {
+      width: 100%;
+      text-align: center;
     }
-
-    .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
+  
+    header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
     }
-
-    .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
+  
+    header nav ul li a {
+      font-size: 20px;
     }
-
-    .step-text {
-        flex: 100%;
+  
+    footer h2, footer div {
+      text-align: center;
+      width: 100%;
     }
-}
-
-/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px) {
-    .hero-form button {
-        width: 100%;
+  
+    .hero-cta, .hero-form {
+      width: 100%;
     }
-
+    
+    .hero-cta {
+      text-align: center;
+    }
+  
     .section-title {
-        width: 95%;
+      width: 80%;
     }
-
-    .intro p {
-        width: 100%;
-    }
-
+    
     .trainer {
-        flex: 0 100%;
+      flex: 0 70%;
     }
-
+    
+    .contact-info iframe{
+      flex: 1 100%;
+    }
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    section {
+      padding: 30px 15px;
+    }
+  
+    .step h3 {
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .step-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .step-img {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .step-text {
+      flex: 100%;  
+    }
+  
+    .trainer-bio h3, .trainer-bio h4 {
+      display: block;
+    }
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    .hero-form button {
+      width: 100%;
+    }
+  
+    .section-title {
+      width: 95%;
+    }
+  
+    .intro p {
+      width: 100%;
+    }
+  
+    .trainer {
+      flex: 0 100%;
+    }
+  
     .contact-info {
-        text-align: center;
+      text-align: center;
     }
-
+  
     .contact-info > * {
-        flex: 0 100%;
+      flex: 0 100%;
     }
-
+  
     .contact-form {
-        order: 3;
+      order: 3;
     }
-}
-
+  }
